# serializer version: 1
# name: test_core_3x1treino_seed17
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'V-Up',
            'Russian Twist',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Canoinha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'core(3)',
    }),
  ])
# ---
# name: test_costas_4x1treino_seed9
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Remada Uni Polia',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Curvada Smith',
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'costas(4)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 1,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Fechado',
            'Step Up',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Good Morning',
            'Desenv. Landmine',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Serrote Aberto',
            'Russian Twist',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pullover Polia',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Adução Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + rotacao_tronco(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Supinada',
            'Hiperextensão 45°',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agachamento Livre',
            'Remada Seal Halteres',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Smith Inclinado',
            'Crunch Na Bola',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenvolvimento Smith',
            'Side Clams',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + flexao_tronco(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Curvada Smith',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra C/ Borracha',
            'Agach. Lateral',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Inclinado Halteres',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Ponte Na Caixa',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + rotacao_tronco(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Remada Aberta Trx',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Puxada Supinada',
            'Agachamento Smith Rampa',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Barra',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio Ajoelhado',
            'Prancha Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + flexao_lateral(1)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1_HIB2
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 1,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Fechado',
            'Step Up',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Good Morning',
            'Desenv. Landmine',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Serrote Aberto',
            'Russian Twist',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pullover Polia',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Adução Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + rotacao_tronco(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Supinada',
            'Hiperextensão 45°',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agachamento Livre',
            'Remada Seal Halteres',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Smith Inclinado',
            'Crunch Na Bola',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenvolvimento Smith',
            'Side Clams',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + flexao_tronco(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Curvada Smith',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra C/ Borracha',
            'Agach. Lateral',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Inclinado Halteres',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Ponte Na Caixa',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + rotacao_tronco(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Remada Aberta Trx',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Puxada Supinada',
            'Agachamento Smith Rampa',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Barra',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio Ajoelhado',
            'Prancha Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + flexao_lateral(1)',
    }),
  ])
# ---
# name: test_hinge_2_squat_unilateral_2_seed19
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Recuo C/ Barra',
            'Stiff Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Passada',
            'Hip Thrust C/ Band',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'hinge(2) + squat(2)',
    }),
  ])
# ---
# name: test_max_complexidade_baixa_seed29
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'puxadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Apoiado',
            'Desenv. Landmine',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Elevado',
            'Crossover Sentado',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(4)',
    }),
  ])
# ---
# name: test_peito_3x2treinos_seed13
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Smith Inclinado',
            'Crucifixo Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Elevado',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'peito(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Inclinado Halteres',
            'Crossover Sentado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Anilha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'peito(3)',
    }),
  ])
# ---
# name: test_perna_anterior_3x3treinos_seed3
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Búlgaro',
            'Agachamento Goblet Rampa',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Cadeira Extensora',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Passada Dos Steps',
            'Agachamento Smith Rampa',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Leg Press',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Livre',
            'Recuo Alternado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agach. Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
  ])
# ---
# name: test_perna_posterior_2x2treinos_seed5
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hiperextensão 45°',
            'Side Clams',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Nordic Curl',
            'Ponte Na Caixa',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
  ])
# ---
# name: test_template_empurrar_puxar_seed7
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'flexao_lateral',
          'escopo_demanda': 'flexao_lateral',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 1,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Supino Com Barra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Fechado',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'V-Up Unilateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Landmine',
            'Nordic Curl',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crucifixo Halteres',
            'Prancha Lateral',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Tríceps Corda',
            'Hip Thrust Uni.',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + flexao_quadril(1) + flexao_lateral(1) + triceps(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'flexao_lateral',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Prancha Lateral',
            'prancha lateral',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Stiff Barra Smith',
            'Apoio',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Smith Inclinado',
            'Flexão Joelhos Slide',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Barra',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Ponte Na Caixa',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crucifixo Inclinado Halteres',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Tríceps Testa Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + flexao_lateral(1) + rotacao_tronco(1) + triceps(1)',
    }),
  ])
# ---
# name: test_triceps_2_filtro_familia_relax_seed23
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Tríceps Coice Polia',
            'Tríceps Francês',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'triceps(2)',
    }),
  ])
# ---
# name: test_upper_3_lower_2_core_2_3treinos_seed42
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'puxadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
        dict({
          'chave': 'puxadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 1,
        }),
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 2,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Curvada Smith',
            'Agachamento Goblet Rampa',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Inclinado Halteres',
            'Crunch Na Bola',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Crossover',
            'Ponte',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Hollow Hold',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Remada Apoiado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agachamento Smith',
            'Desenv. Landmine',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Apoio Elevado',
            'Canoinha',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Prancha Bola',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Livre',
            'Desenv. Halteres Sentado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Smith Inclinado',
            'Stiff Halteres',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Puxada Supinada',
            'Russian Twist',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
  ])
# ---
# name: test_upper_3x2treinos_seed11
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 1,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Anilha',
            'Crossover Sentado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Pullover Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Desenv. Halteres Sentado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Inclinado Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
  ])
# ---
